# tg_bot_mpei

./: .dockerignore  .gitignore  Dockerfile  Makefile  pyproject.toml
.github/workflows/: docker-publish.yml
src/: bot.py  exceptions.py  gpt.py  main.py  middlewares.py  models.py  recognizer.py  settings.py  storage.py  template.json  utils.py
src/handlers/: admin.py  dependencies.py
src/handlers/bot/: bot.py  utils.py
